--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toggle": "^1.1.0",
+    "@types/js-cookie": "^3.0.6",
     "@uiw/react-md-editor": "^4.0.4",
     "axios": "^1.7.7",
     "canvas-confetti": "^1.9.3",
@@ -25,6 +26,7 @@
     "clsx": "^2.1.1",
     "firebase": "^11.0.2",
     "framer-motion": "^11.11.17",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
