Fixed Create Succes modal; added a ROBUST admin dashboard; errors still lingering

--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,6 @@ vendor/
 
 # Database
 db/webtech_fall2024_nana_amoako.sql
+
+# Firebase Admin SDK
+nanoclip-98ea7-firebase-adminsdk-ov708-28b4b0f5de.json
