--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.16"
+    "tailwindcss": "^3.4.16",
+    "typescript": "5.7.2"
   },
   "type": "module"
 }
