--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-toggle": "^1.1.0",
     "@types/js-cookie": "^3.0.6",
+    "@types/ws": "^8.5.13",
     "@uiw/react-md-editor": "^4.0.4",
     "axios": "^1.7.7",
     "canvas-confetti": "^1.9.3",
@@ -43,8 +44,10 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.5",
     "recharts": "^2.14.1",
+    "simple-peer": "^9.11.1",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
