--- a/package.json
+++ b/package.json
@@ -1,59 +1,47 @@
 {
-  "name": "nanoclipnext",
-  "version": "2.1.0",
+  "name": "nanoclip",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "node server.js"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^6.1.7",
-    "@mui/material": "^6.1.7",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-navigation-menu": "^1.2.1",
-    "@radix-ui/react-progress": "^1.1.0",
-    "@radix-ui/react-scroll-area": "^1.2.1",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-tabs": "^1.1.1",
-    "@radix-ui/react-toast": "^1.2.2",
-    "@radix-ui/react-toggle": "^1.1.0",
-    "@types/js-cookie": "^3.0.6",
-    "@types/ws": "^8.5.13",
-    "@uiw/react-md-editor": "^4.0.4",
-    "axios": "^1.7.7",
-    "canvas-confetti": "^1.9.3",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-progress": "^1.1.1",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "dotenv": "^16.4.7",
-    "firebase": "^11.0.2",
-    "firebase-admin": "^13.0.1",
-    "framer-motion": "^11.13.1",
-    "jose": "^5.9.6",
+    "clsx": "^2.0.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "firebase": "^10.7.1",
+    "firebase-admin": "^11.11.1",
+    "framer-motion": "^10.16.16",
     "js-cookie": "^3.0.5",
-    "lucide-react": "^0.456.0",
-    "next": "15.0.3",
-    "next-themes": "^0.4.3",
-    "nodemailer": "^6.9.16",
-    "qrcode": "^1.5.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-dropzone": "^14.3.5",
-    "recharts": "^2.14.1",
-    "simple-peer": "^9.11.1",
-    "tailwind-merge": "^2.5.4",
+    "lucide-react": "^0.298.0",
+    "next": "14.0.4",
+    "next-themes": "^0.2.1",
+    "react": "^18",
+    "react-dom": "^18",
+    "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
-    "ws": "^8.18.0"
+    "ws": "^8.15.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.16",
-    "typescript": "5.7.2"
-  },
-  "type": "module"
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
+  }
 }
